--- a/spoofer.html
+++ b/spoofer.html
@@ -416,6 +416,7 @@
         <a class="nav-btn" href="features.html">Features</a>
         <a class="nav-btn active" href="spoofer.html">Spoofer</a>
         <a class="nav-btn" href="https://discord.gg/j6p4yvsfN3" target="_blank" rel="noopener noreferrer">Support</a>
+        <a class="nav-btn" href="https://www.youtube.com/@collideghost" target="_blank" rel="noopener noreferrer">Youtube</a>
         <button class="nav-btn danger" id="eliteOpen" type="button">Ghosty Elite</button>
       </nav>
     </div>
