--- a/index.html
+++ b/index.html
@@ -652,23 +652,23 @@
             <div class="stat"><b>Living Project</b><span>Frequent updates and fixes</span></div>
             <div class="stat"><b>Community</b><span>Discord support and 1,5k+ member community.</span></div>
           </div>
-          <div class="discord-widget-card">
-            <h4><i class="fa-brands fa-discord"></i> Join Ghosty Discord</h4>
-            <div class="discord-widget-meta" id="discordMeta">
-            </div>
-          <iframe
-  class="discord-widget-frame"
-  src="https://discord.com/widget?id=1395744314960773293&theme=dark"
-  width="100%"
-  height="210"
-  allowtransparency="true"
-  frameborder="0"
-  sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"
-  title="Ghosty Discord server widget">
-</iframe>
+         <a href="https://discord.gg/j6p4yvsfN3" target="_blank" rel="noopener noreferrer" style="text-decoration:none; color:inherit;">
+  <div class="discord-widget-card">
+    <h4><i class="fa-brands fa-discord"></i> Join Ghosty Discord</h4>
+    <div class="discord-widget-meta" id="discordMeta"></div>
 
-           
-          </div>
+    <iframe
+      class="discord-widget-frame"
+      src="https://discord.com/widget?id=1395744314960773293&theme=dark"
+      width="100%"
+      height="210"
+      allowtransparency="true"
+      frameborder="0"
+      sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"
+      title="Ghosty Discord server widget">
+    </iframe>
+  </div>
+</a>
         </aside>
       </div>
     </section>
