--- a/index.html
+++ b/index.html
@@ -650,11 +650,11 @@
           <div class="stat-grid">
             <div class="stat"><b>99%</b><span>Undetected and usefull features, and detected features are highlighted</span></div>
             <div class="stat"><b>Living Project</b><span>Frequent updates and fixes</span></div>
-            <div class="stat"><b>Community</b><span>Discord support and 1,5k+ member community.</span></div>
+            <div class="stat"><b>Community</b><span>Discord support and 1,5k+ ghosties.</span></div>
           </div>
          <a href="https://discord.gg/j6p4yvsfN3" target="_blank" rel="noopener noreferrer" style="text-decoration:none; color:inherit;">
   <div class="discord-widget-card">
-    <h4><i class="fa-brands fa-discord"></i> Join Ghosty Discord</h4>
+    <h4><i class="fa-brands fa-discord"></i> Join our 1,5K+ Members Community</h4>
     <div class="discord-widget-meta" id="discordMeta"></div>
 
     <iframe
