--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Ghosty - The Ultimate External Tool for Euro Truck Simulator 2 and TruckersMP" />
+  
+  <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/1235/1235097.png" />
+
   <title>Ghosty | Official</title>
+
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
