--- a/features.html
+++ b/features.html
@@ -481,7 +481,7 @@
             </div>
             <div class="title">Trailer Chaos</div>
             <div class="desc">
-              Applies force to the truck, cabin, and trailers to create chaotic movement.
+              Applies force to the truck oscillation, cabin, and trailers to create chaotic movement.
             </div>
           </article>
 
@@ -512,132 +512,15 @@
                 <span class="chip">SERVER</span>
               </div>
             </div>
-            <div class="title">Speed Booster</div>
+            <div class="title">Speed Unlocker UNDETECTED</div>
             <div class="desc">
-              Increases acceleration and top speed response for your truck.
+              Undetected version of lite speed unlocker.
             </div>
           </article>
-
-          <article class="card" style="border-color:rgba(255,76,76,.45);">
-            <div class="top">
-              <div class="icon" style="background:rgba(255,76,76,.15); border-color:rgba(255,76,76,.35);">
-                <i class="fas fa-road-barrier" style="color:#ff4c4c;"></i>
-              </div>
-              <div class="chips">
-                <span class="chip danger">ELITE</span>
-                <span class="chip">SERVER</span>
-              </div>
-            </div>
-            <div class="title">Collision Push</div>
-            <div class="desc">
-              Applies stronger impact force during contact with nearby players.
-            </div>
-          </article>
-
-          <article class="card" style="border-color:rgba(255,76,76,.45);">
-            <div class="top">
-              <div class="icon" style="background:rgba(255,76,76,.15); border-color:rgba(255,76,76,.35);">
-                <i class="fas fa-car-side" style="color:#ff4c4c;"></i>
-              </div>
-              <div class="chips">
-                <span class="chip danger">ELITE</span>
-                <span class="chip">SERVER</span>
-              </div>
-            </div>
-            <div class="title">Vehicle Flip</div>
-            <div class="desc">
-              Triggers aggressive truck flipping behavior for impact tricks.
-            </div>
-          </article>
-
-          <article class="card" style="border-color:rgba(255,76,76,.45);">
-            <div class="top">
-              <div class="icon" style="background:rgba(255,76,76,.15); border-color:rgba(255,76,76,.35);">
-                <i class="fas fa-person-falling" style="color:#ff4c4c;"></i>
-              </div>
-              <div class="chips">
-                <span class="chip danger">ELITE</span>
-                <span class="chip">SERVER</span>
-              </div>
-            </div>
-            <div class="title">Throw Player</div>
-            <div class="desc">
-              Forces nearby player trucks upward/away depending on sync and position.
-            </div>
-          </article>
-
-          <article class="card" style="border-color:rgba(255,76,76,.45);">
-            <div class="top">
-              <div class="icon" style="background:rgba(255,76,76,.15); border-color:rgba(255,76,76,.35);">
-                <i class="fas fa-user-secret" style="color:#ff4c4c;"></i>
-              </div>
-              <div class="chips">
-                <span class="chip danger">ELITE</span>
-                <span class="chip warn">Risk</span>
-                <span class="chip">TMP</span>
-              </div>
-            </div>
-            <div class="title">Admin-Hack Helpers</div>
-            <div class="desc">
-              Includes risky options intended for temporary utility. Use carefully.
-            </div>
-          </article>
-
-          <article class="card" style="border-color:rgba(255,76,76,.45);">
-            <div class="top">
-              <div class="icon" style="background:rgba(255,76,76,.15); border-color:rgba(255,76,76,.35);">
-                <i class="fas fa-bomb" style="color:#ff4c4c;"></i>
-              </div>
-              <div class="chips">
-                <span class="chip danger">ELITE</span>
-                <span class="chip warn">Detected</span>
-                <span class="chip">SERVER</span>
-              </div>
-            </div>
-            <div class="title">Aggressive Crash Tools</div>
-            <div class="desc">
-              High-impact tools mostly for chaos. More likely to trigger reports.
-            </div>
-          </article>
-
-          <article class="card" style="border-color:rgba(255,76,76,.45);">
-            <div class="top">
-              <div class="icon" style="background:rgba(255,76,76,.15); border-color:rgba(255,76,76,.35);">
-                <i class="fas fa-lightbulb" style="color:#ff4c4c;"></i>
-              </div>
-              <div class="chips">
-                <span class="chip danger">ELITE</span>
-                <span class="chip dim">Deprecated</span>
-                <span class="chip">SERVER</span>
-              </div>
-            </div>
-            <div class="title">Legacy Light Hack</div>
-            <div class="desc">
-              Older light manipulation option marked deprecated.
-            </div>
-          </article>
-
-          <article class="card" style="border-color:rgba(255,76,76,.45);">
-            <div class="top">
-              <div class="icon" style="background:rgba(255,76,76,.15); border-color:rgba(255,76,76,.35);">
-                <i class="fas fa-bolt" style="color:#ff4c4c;"></i>
-              </div>
-              <div class="chips">
-                <span class="chip danger">ELITE</span>
-                <span class="chip">SERVER</span>
-              </div>
-            </div>
-            <div class="title">Burst Velocity</div>
-            <div class="desc">
-              Short, strong acceleration burst for quick launches.
-            </div>
-          </article>
-        </div>
-      </section>
 
       <section class="section">
         <div class="section-title">
-          <h2>Server / Sync Features</h2>
+          <h2>Lite Exploits</h2>
           <div class="sub">Online options for TruckersMP behavior.</div>
         </div>
 
@@ -647,37 +530,11 @@
               <div class="icon"><i class="fas fa-ghost"></i></div>
               <div class="chips"><span class="chip ok">Undetected</span><span class="chip">SERVER</span></div>
             </div>
-            <div class="title">Ghost Mode Ping</div>
+            <div class="title">Fake Lag</div>
             <div class="desc">Makes your sync behavior harder to read for nearby players.</div>
           </article>
 
-          <article class="card">
-            <div class="top">
-              <div class="icon"><i class="fas fa-location-crosshairs"></i></div>
-              <div class="chips"><span class="chip">TMP</span><span class="chip warn">Admin‑hack</span></div>
-            </div>
-            <div class="title">Teleport Enabler</div>
-            <div class="desc">Enables teleport-style movement utilities in TMP contexts.</div>
-          </article>
-
-          <article class="card">
-            <div class="top">
-              <div class="icon"><i class="fas fa-user-shield"></i></div>
-              <div class="chips"><span class="chip ok">Undetected</span><span class="chip">SERVER</span></div>
-            </div>
-            <div class="title">Admin Detector</div>
-            <div class="desc">Warns when admin/staff are nearby so you can react fast.</div>
-          </article>
-
-          <article class="card">
-            <div class="top">
-              <div class="icon"><i class="fas fa-tags"></i></div>
-              <div class="chips"><span class="chip warn">Detection warning</span><span class="chip">TMP</span></div>
-            </div>
-            <div class="title">Player Speed Tag</div>
-            <div class="desc">Shows live speed tags on players. Marked as riskier in UI.</div>
-          </article>
-
+       
           <article class="card">
             <div class="top">
               <div class="icon"><i class="fas fa-toggle-on"></i></div>
