--- a/features.html
+++ b/features.html
@@ -481,7 +481,7 @@
             </div>
             <div class="title">Trailer Chaos</div>
             <div class="desc">
-              Applies force to the truck oscillation, cabin, and trailers to create chaotic movement.
+              Applies force to the truck, cabin, and trailers to create chaotic movement.
             </div>
           </article>
 
@@ -509,35 +509,48 @@
               <div class="chips">
                 <span class="chip danger">ELITE</span>
                 <span class="chip ok">Undetected</span>
-                <span class="chip">SERVER</span>
               </div>
             </div>
-            <div class="title">Speed Unlocker UNDETECTED</div>
+            <div class="title">Undetected Speed Unlocker</div>
             <div class="desc">
-              Undetected version of lite speed unlocker.
+              Alternative speed unlocker designed to work without triggering detection warnings.
             </div>
           </article>
 
+        </div>
+      </section>
+
       <section class="section">
         <div class="section-title">
-          <h2>Lite Exploits</h2>
-          <div class="sub">Online options for TruckersMP behavior.</div>
+          <h2>Online / TMP</h2>
+          <div class="sub">Multiplayer-facing options.</div>
         </div>
 
         <div class="grid">
           <article class="card">
             <div class="top">
-              <div class="icon"><i class="fas fa-ghost"></i></div>
-              <div class="chips"><span class="chip ok">Undetected</span><span class="chip">SERVER</span></div>
+              <div class="icon"><i class="fas fa-network-wired"></i></div>
+              <div class="chips"><span class="chip">TMP</span><span class="chip dim">Hold A</span></div>
             </div>
-            <div class="title">Fake Lag</div>
-            <div class="desc">Makes your sync behavior harder to read for nearby players.</div>
+            <div class="title">Fake Lag TMP (Hold A)</div>
+            <div class="desc">Simulates lag while holding the key. Changes how your movement looks online.</div>
           </article>
 
-       
           <article class="card">
             <div class="top">
-              <div class="icon"><i class="fas fa-toggle-on"></i></div>
+              <div class="icon"><i class="fas fa-gauge-high"></i></div>
+              <div class="chips">
+                <span class="chip">TMP</span>
+                <span class="chip warn">Detection warning</span>
+              </div>
+            </div>
+            <div class="title">Speed Unlocker</div>
+            <div class="desc">Unlocks speed limits in TMP. Your UI flags it as risky.</div>
+          </article>
+
+          <article class="card">
+            <div class="top">
+              <div class="icon"><i class="fas fa-signal"></i></div>
               <div class="chips"><span class="chip">SERVER</span></div>
             </div>
             <div class="title">Freeze Turn Signals</div>
